[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rho-uncertainty"
version = "0.1.1"
description = "Correcting inference in SAR models for rho-estimation uncertainty"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy>=1.20", "scipy>=1.7"]
authors = [{name = "Will Qiang"}]
keywords = ["spatial econometrics", "SAR", "variance inflation"]

[project.urls]
Homepage = "https://github.com/WillWeiQiang/rho-uncertainty"

[tool.setuptools]
py-modules = ["rho_uncertainty"]
